--- a/src/T4Toolbox.VisualStudio.Editor/T4Toolbox.VisualStudio.Editor.csproj
+++ b/src/T4Toolbox.VisualStudio.Editor/T4Toolbox.VisualStudio.Editor.csproj
@@ -5,6 +5,8 @@
   <PropertyGroup>
     <ProjectGuid>{FDE953D3-AD27-4398-8EF4-293C0CEBDC3E}</ProjectGuid>
     <OutputType>Library</OutputType>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " />
